2005-09-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:  --- Release 1.2.0 ---
	
	* all: Added copyright and license information to all files. Wrote
	a readme file. Implemented the -anchor configuration
	option. Cleaned up whitespace indentation. Added caching of more
	graph pointers. Discovered that the ASF filter _requires_ an audio
	input for writing wmv/asf files. Cleaned up the demo.

2005-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkvideo.h: Implemented support for recording data to
	* generic/tkvideo.c: avi and wmv files and enabled audio.
	* win/winvideo.cpp:  Added support for seeking in seekable streams
	* demos/demo.tcl:    Many other big fixes and cleanups.
	
2005-09-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/winvideo.cpp: fixed bug #4992 - CreateClassEnumerator
	returns a success code on failure, so check the pointer.

2004-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/tkvideo.man: NEW: added initial doc file.
	* generic/tkvideo.c: Added header to avoid MSVC warnings.
	* win/winvideo.cpp: Minor bug fixes.
	* win/makefile.vc: Added demo target.

2004-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:  Created SVN repository at Berlios.de.

2003-12-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:  Initial import of tkvideo widget.